# CS109FlightDelayForecaster

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  WALK_FORWARD_SUMMARY.md  WEATHER_INTEGRATION_SUMMARY.md  demo_walk_forward.py  deploy.sh  env.example  pyproject.toml  requirements.txt  test_local_integration.py  vercel.json
.ci/: check_regression.py  target.json
.github/workflows/: accuracy.yml  ci.yml  cron.yml
.hypothesis/constants/: 057934679a446e5b  149dd04c7ef25eb7  166fad70682a7628  1c47cb3753ea9616  310620c49099b760  3c2edf40be26e2ae  4c3c839fee01084d  6b9259bafd1bd326  852af7355347f7b8  9f7584ab53689459  a3dc1c50bc73d6e3  a4719e66679123b3  a601673680ebba86  acb7192244780d08  b28f17e12bb68973  c5e96c9c6f78e15b  cd87504251900c10  d01c75c710903021  da39a3ee5e6b4b0d  dd18f0a5f99275f1  e164a7604f20f71a
api/: forecast.py  health.py
api/forecast/: [...params].py
backend/: main.py
cron/: create_dummy_live_perf.py  validate_live.py
data/: flights.duckdb  flights_expanded.duckdb  flights_real.duckdb  live_perf.parquet
docs/: report_out.ipynb  walk_forward_validation.md
flight_delay_bayes/: __init__.py  cli.py
flight_delay_bayes/api/: main.py
flight_delay_bayes/bayes/: delay_curve.py  hier_model.py  hier_online.py  pipeline.py  prior_estimator.py  updater.py
flight_delay_bayes/eval/: __init__.py  backtest.py  walk_forward.py
flight_delay_bayes/ingestion/: bts_bulk_ingest.py  bts_ingest.py
flight_delay_bayes/realtime/: aviationstack.py  metar.py  noaa_gridpoint.py
flight_delay_bayes/weather/: __init__.py  enrichment.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
models/: delay_curve.json  fast_delay_model_logistic.pkl  hier_delays_2023_2023_2023.nc  hier_delays_2023_2023_2023.pkl  test_hier_2023_2023.nc  test_hier_2023_2023.pkl
notebooks/: report.ipynb
scripts/: build_airport_database.py  download_bts.py  download_real_data.py  expand_training_data.py  ingest_kaggle_data.py  train_enhanced_model.py  train_fast_model.py  train_robust_model.py
tests/: test_api.py  test_delay_curve.py  test_delay_thresholds.py  test_prior_estimator.py  test_updater.py  test_walk_forward.py
webapp/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
webapp/src/: App.tsx  index.css  main.tsx
webapp/src/components/: BottomSheet.tsx  FlightGlobe.tsx
webapp/src/data/: airports.json  airports.ts
webapp/src/utils/: airportAPI.ts  airportCoords.ts  airportInfo.ts
