[tool.poetry]
name = "flight_delay_forecaster"
version = "0.1.0"
description = "Real-time Bayesian flight delay forecaster"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pandas = "^2.2.2"
polars = "^0.20.17"
SQLModel = "^0.0.19"
sqlalchemy = "^2.0.30"
httpx = "^0.27.0"
pydantic-extra-types = "^2.6.0"
scikit-learn = "^1.4.2"
scipy = "^1.12.0"
matplotlib = "^3.9.0"
plotly = "^5.20.0"
streamlit-extras = "^0.3.3"
pytest = "^8.1.0"
jupyter = "^1.0.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.4.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api" 