[tool.poetry]
name = "flight_delay_bayes"
version = "0.1.0"
description = "Bayesian flight delay forecasting"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "flight_delay_bayes" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
duckdb = "^0.10.0"
pandas = ">=2.2"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
typer = "^0.12.3"
scipy = "^1.13.0"
tqdm = "^4.66.4"
ruff = "^0.4.3"
kaggle = "^1.6.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
bambi = "^0.13.0"
pymc = "^5.10.0"
arviz = "^0.18.0"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
hypothesis = "^6.100.1"
ipykernel = "^6.29.3"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double" 